--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 beautifulsoup4==4.6.3
 bs4==0.0.1
-certifi==2018.8.24
+certifi==2018.10.15
 chardet==3.0.4
+flask==1.0.2
 idna==2.7
-numexpr==2.6.8
-numpy==1.15.1
-pandas==0.23.4
-python-dateutil==2.7.3
-pytz==2018.5
+numexpr
+numpy
+pandas
+python-dateutil==2.7.5
+pytz==2018.7
 PyYAML==3.13
-requests==2.19.1
-selenium==2.52.0
+requests==2.20.0
 six==1.11.0
-tables==3.4.4
-urllib3==1.23
+tables
+urllib3==1.24
