--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,12 @@ data:
       pap: "https://www.pap.fr/annonce/vente-appartement-maison-hauts-de-seine-92-g456g458-jusqu-a-125000-euros-a-partir-de-18-m2"
       # leboncoin: "https://www.leboncoin.fr/recherche/?category=9&regions=12&departments=92&department_near=1&real_estate_type=1,2,5&price=75000-125000"
 
+  - city: 'test'
+    frequency: 5
+    ratio_max: 15000
+    urls: 
+      seloger: "https://www.seloger.com/list.htm?types=1%2C2&projects=2%2C5&enterprise=0&sort=d_dt_crea&natures=1%2C2%2C4&places=%5B%7Bci%3A750056%7D%5D&qsVersion=1.0"
+
   # - city: 'paris'
   #   frequency: 10
   #   ratio_max: 10000
